--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>细胞自动机</title>
+   <meta charset="utf-8" />
   <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
