--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 <body>
   <script src="cell.js"></script>
   <label for="width">宽度</label>
-  <input type="number" id="width" min="0" max="100" value="10">
+  <input type="number" id="width" value="50" min="1" max="100">
   <label for="height">高度</label>
-  <input type="number" id="height"  min="0" max="100" value="10">
-  <input type="button" id="start" value="开始" onclick="Start()">
-
-  <input type="button" id="move" value="移动" onclick="Move()">
+  <input type="number" id="height" value="50" min="1" max="100">
+    <label for="rate">比率</label>
+  <input type="number" id="rate" value="0.5" step="0.05" min="0" max="1">
+  <input type="button" id="start" value="开始" onclick="Game.Start()">
+  <input type="button" id="move" value="移动" onclick="Game.Move()">
   <label>
-  <input type="checkbox" id="auto" onchange="Auto()">
+  <input type="checkbox" id="auto" onchange="Game.Auto()">
       自动
   </label>
   时间:<span id="time">0</span>
+  <span>单击细胞可以改变细胞的状态。</span>
   <div id="main"></div>
 </body>
 </html>
